Fixes cut off hero image

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -598,6 +598,7 @@ body {
 
 .hero-home {
   background: url(../images/hero-bg.png) no-repeat;
+  background-size: cover;
   position: relative;
   transition: height .4s;
   height: 400px;
