--- a/assets/sass/components/_hero-home.scss
+++ b/assets/sass/components/_hero-home.scss
@@ -1,5 +1,6 @@
 .hero-home {
   background: url(../images/hero-bg.png) no-repeat;
+  background-size: cover;
   position: relative;
   transition: height .4s;
   height: 400px;
